2005-08-29  Mark Kettenis  <kettenis@gnu.org>

	* solib-svr4.c (svr4_current_sos, svr4_fetch_objfile_link_map):
	Use XZALLOC and xzalloc instead of xmalloc where appropriate.

2005-08-27  Eli Zaretskii  <eliz@gnu.org>

	* main.c (print_gdb_help): Don't advertise the (long non-existent)
	option --mapped.

2005-08-21  Mark Kettenis  <kettenis@gnu.org>

	* doublest.c (floatformat_mantissa): Use xsnprintf instead of
	sprintf.

	* vaxobsd-tdep.c: New file.
	* config/vax/obsd.mt (TDEPFILES): Add vaxobsd-tdep.o.
	* Makefile.in (vaxobsd-tdep.o): New dependency.

	* ppcobsd-tdep.c: Include "frame.h" and "frame-unwind.h".  Don't
	include "tramp-frame.h".
	(ppcobsd_sigtramp_cache_init): Remove function.
	(ppcobsd_sigtramp): Remove variable.
	(ppcobsd_page_size, ppcobsd_sigreturn_offset): New variables.
	(ppcobsd_sigtramp_p): New function.
	(ppcobsd_sigtramp_frame_cache, ppcobsd_sigtramp_frame_this_id)
	(ppcobsd_sigtramp_frame_prev_register): New functions.
	(ppcobsd_sigtramp_frame_unwind): New variable.
	(ppcobsd_sigtramp_frame_sniffer): New function.
	(ppcobsd_init_abi): Adjust to register new sigtramp sniffer
	instead of the old one.
	* Makefile.in (ppcobsd-tdep.o): Update dependencies.

	* infcall.c (call_function_by_hand): For
	RETURN_VALUE_ABI_RETURNS_ADDRESS and
	RETURN_VALUE_ABI_PRESERVES_ADDRESS, use gdbarch_return_value to
	get return value.

	* valarith.c (value_equal, value_less): Avoid compiler bug on
	systems where `long double' values are returned in static storage.

2005-08-18  Mark Kettenis  <kettenis@gnu.org>

	* stack.c: Reformat.  Improve comments.  Include "valprint.h".
	(args_info, locals_info, backtrace_command, backtrace_command_1)
	(backtrace_full_command, frame_info, frame_command, down_command)
	(down_silently_base, down_silently_command, up_command)
	(up_silently_base, up_silently_command, parse_frame_specification)
	(current_frame_command, print_frame_args_vars, catch_info)
	(args_plus_locals_info), print_frame_label_vars)